# EvoGenesis

./: .gitignore  .pre-commit-config.yaml  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  pypi.yml
EvoGenesis/: __init__.py  __main__.py
doc/: api.rst  conf.py  index.rst
notebooks/: demo.ipynb
tests/: test_EvoGenesis.py  test_cli.py
