# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = ["setuptools >=61", "setuptools_scm >=7"]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for EvoGenesis's version
[project]
name = "EvoGenesis"
description = "A playground to try out evolutionary computation in conjunction with generative machine learning"
readme = "README.md"
maintainers = [{ name = "Harald Mack", email = "harald.mack@protonmail.com" }]
dynamic = ["version"]
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["click", "torch", "torchvision", "deap", "pandas", "pyarrow"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "nbval", "ruff"]
docs = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
    "sphinxcontrib-napoleon",
    "myst-parser",
]

# Command line scripts installed as part of the installation
[project.scripts]
EvoGenesis = "EvoGenesis.__main__:main"

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = ["EvoGenesis"]

# Configure setuptools_scm, which extracts the version number from
# the version control system. For more information see its documentation:
# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "EvoGenesis/_version.py"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = ["tests", "notebooks"]
addopts = "-v -x --nbval --current-env --cov=./EvoGenesis --cov-branch --cov-report=html ./tests"
